# model_deploy

./: .env.example  .gitignore  README.md  app.py  app_vllm.py  config.yml  example_openai_compatible.py  example_usage.py  pyproject.toml  pytest.ini  render.yaml  start_vllm_server.sh  test_curl.sh  validate_setup.py
benchmarking/: QUICKSTART.md  README.md  __init__.py  claasification_rules.txt  evaluate_model.py  model_inference.py  visualize_results.py
benchmarking/data_fetcher/: __init__.py  supabase_client.py
benchmarking/results/: metrics_20260113_231036.json  metrics_20260114_223607.json  metrics_20260115_000738.json  metrics_20260115_001242.json  metrics_20260115_001636.json  predictions_20260113_231036.csv  predictions_20260114_223607.csv  predictions_20260115_000738.csv  predictions_20260115_001242.csv  predictions_20260115_001636.csv
docs/: ARCHITECTURE.md  DEPLOYMENT.md  REALISTIC_USE_CASE_TESTS.md  RECORD_Change.md  SUMMARY.md  TESTING_GUIDE.md  VLLM_DEPLOYMENT.md  project_structure.txt
local_server/: config.yml  example_usage.py
model/: download_hf_model.py  export_ckpt_hf.py
model_covert/: upload_model.py
model_covert_tools/: download_finetuned_model.py  download_hf_model.py
src/: __init__.py  config.py  model.py
src/analysis/: __init__.py  example_analyzer.py
tests/: README.md  conftest.py  test_api.py  test_vllm_concurrency.py  test_vllm_server.py
